--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/jellyfive/anaconda3/envs/chineseocr/bin/python"
+    "python.pythonPath": "D:\\anaconda\\python.exe"
 }
